:arrow_up: Update dependencies

--- a/src/assets/bootstrap-custom.scss
+++ b/src/assets/bootstrap-custom.scss
@@ -8,6 +8,8 @@ $body-color: #f7f7f7;
 
 $border-radius: 4px;
 
+$navbar-light-brand-color: $primary;
+
 $list-group-color: $body-color;
 $list-group-bg: #121213;
 $list-group-border-color: $list-group-bg;
